@@ -1,9 +1,18 @@
 namespace :state_machine do
   desc 'Draws a set of state machines using GraphViz. Target files to load with FILE=x,y,z; Machine class with CLASS=x,y,z; Font name with FONT=x; Image format with FORMAT=x; Orientation with ORIENTATION=x'
   task :draw do
-    # Load the library
-    $:.unshift(File.dirname(__FILE__) + '/..')
-    require 'state_machine'
+    if defined?(Rails)
+      Rake::Task['environment'].invoke
+    elsif defined?(Merb)
+      Rake::Task['merb_env'].invoke
+      
+      # Fix ruby-graphviz being incompatible with Merb's process title
+      $0 = 'rake'
+    else
+      # Load the library
+      $:.unshift(File.dirname(__FILE__) + '/..')
+      require 'state_machine'
+    end
     
     # Build drawing options
     options = {}
@@ -14,17 +23,5 @@ namespace :state_machine do
     options[:orientation] = ENV['ORIENTATION'] if ENV['ORIENTATION']
     
     StateMachine::Machine.draw(ENV['CLASS'], options)
-  end
-  
-  namespace :draw do
-    desc 'Draws a set of state machines using GraphViz for a Ruby on Rails application.  Target class with CLASS=x,y,z; Font name with FONT=x; Image format with FORMAT=x; Orientation with ORIENTATION=x'
-    task :rails => [:environment, 'state_machine:draw']
-    
-    desc 'Draws a set of state machines using GraphViz for a Merb application.  Target class with CLASS=x,y,z; Font name with FONT=x; Image format with FORMAT=x; Orientation with ORIENTATION=x'
-    task :merb => [:merb_env] do
-      # Fix ruby-graphviz being incompatible with Merb's process title
-      $0 = 'rake'
-      Rake::Task['state_machine:draw'].invoke
-    end
   end
 end
